--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html{
 
 .todo-card{
     margin:130px auto;
-    max-width: 320px;
+    max-width: 370px;
     background-color: #e9e1ff;
     padding:20px 34px;
     
@@ -48,12 +48,6 @@ html{
 .todo-list{
     margin: 22px 0px;
     list-style: none;
-    cursor: pointer;
-}
-
-.todo-list label{
-    margin-left:14px;
-
 }
 
 
@@ -63,18 +57,28 @@ html{
     font-size: 20px;
     margin:12px 3px;
     border-radius: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    cursor: pointer;
+    width:91%;
+    box-sizing: border-box;
 }
 
 .todo-task-input{
     height:16px;
     width: 16px;
+    
 }
-
 
 .todo-task-content{
-    overflow: hidden;
+    cursor: pointer;
 }
 
+.delete:hover{
+    background-color: white;
+    padding:2px;
+}
 
 .poppins-regular {
     font-family: "Poppins", sans-serif;
